test/Fail/Issue2854.err
Issue2854.agda:10.15-16: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2854.agda:10.15-16
